editors/shared/tree-sitter-toon/test/corpus/language_features.txt
=================================
Hexadecimal literals
=================================

code: 0xFF

---

(document
  (pair
    key: (key)
    value: (number))
  (newline))

=================================
Negative hexadecimal literal
=================================

neg: -0x10

---

(document
  (pair
    key: (key)
    value: (number))
  (newline))

=================================
Block strings (triple-quoted)
=================================

desc: """line one
line two
line three"""

---

(document
  (pair
    key: (key)
    value: (block_string))
  (newline))

=================================
Line comments
=================================

# note
name: Alice

---

(document
  (comment)
  (pair
    key: (key)
    value: (unquoted_string))
  (newline))

=================================
Block comments (standalone)
=================================

/* note */
name: Alice

---

(document
  (block_comment)
  (pair
    key: (key)
    value: (unquoted_string))
  (newline))

=================================
Document reference
=================================

db:
  port: 5432
service:
  db_port: ${db.port}

---

(document
  (pair
    key: (key)
    value: (newline)
    value: (indent)
    value: (pair
      key: (key)
      value: (number))
    value: (newline)
    value: (dedent))
  (pair
    key: (key)
    value: (newline)
    value: (indent)
    value: (pair
      key: (key)
      value: (reference))
    value: (newline)
    value: (dedent)))

=================================
Environment variable reference
=================================

api_key: ${env:API_KEY}

---

(document
  (pair
    key: (key)
    value: (reference))
  (newline))
